# library-workshop-rbcn26-online

./: .gitignore  Development.md  README.md  pyproject.toml  robot.toml
.devcontainer/: devcontainer.json
LibraryApi/mini_cart/: pyproject.toml  robot.toml
LibraryApi/mini_cart/src/components/: minicart_starter.py
LibraryApi/mini_cart/src/dynamic/: minicart_dynamic.py  minicart_dynamic_michael.py
LibraryApi/mini_cart/src/hybrid/: minicart_hybrid.py  minicart_hybrid_michael.py
LibraryApi/mini_cart/tests/dynamic/: dynamic.robot
LibraryApi/mini_cart/tests/hybrid/: hybrid_all.robot  hybrid_pricing.robot
LibraryApi/mini_cart/tests/static/: static.robot
PythonLibCore/examples/01-just-the-core/: MyLibCoreLibrary.py  test.robot
PythonLibCore/examples/02-library-components/: MyLibCoreLibrary.py  library_components.py  test.robot
PythonLibCore/examples/03-library-instance/: LibInstance.py  lib_instance_components.py  lib_intance_components.py  test.robot
PythonLibCore/examples/04-error-handling/: MyLibCoreLibrary.py  test.robot
PythonLibCore/examples/05-plugin-interface/: MyLibCoreLibrary.py  Plugin.py  test.robot
PythonLibCore/examples/06-plugin-with-base-library-component/: MyLibCoreLibrary.py  Plugin.py  test.robot
PythonLibCore/examples/07-library-translation/: MyLibCoreLibrary.py  de.json  test.robot  translation.md
PythonLibCore/examples/todo_app/: test.robot
PythonLibCore/tasks/01-just-the-core/: TodoLibrary.py  task1.md  test.robot
PythonLibCore/tasks/02-library-components/: TodoLibrary.py  request_keywords.py  task2.md
PythonLibCore/tasks/03-library-instance/: TodoLibrary.py  request_keywords.py  task3.md  test.robot
PythonLibCore/tasks/04-error-handling/: TodoLibrary.py  task4.md  test.robot
(+16 files in other folders)
