[project]
name = "robocon-library-workshop"
version = "0.1.0"
description = "Repository for Online Robocon Library Workshop 2026"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "robotframework>=7.4.1",
    "robotframework-pythonlibcore>=4.5.0",
    "todo-rest>=0.2.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "robotframework-robocop>=8.2.0",
    "ruff>=0.15.0",
]

[[tool.mypy.overrides]]
module = "OpenApiLibrary.models.openapi_model"
ignore_errors = true
